Fix horizontal scrolling on mobile screens

--- a/css/codingdavinci.css
+++ b/css/codingdavinci.css
@@ -769,5 +769,5 @@ h5 {
 .map:after {
   margin: auto;
   content: "Karte aktivieren";
-  margin: 0 35%;
+  margin: 0 0 0 25%;
 }
